--- a/src/main/docroot/css/layout.css
+++ b/src/main/docroot/css/layout.css
@@ -21,6 +21,10 @@ a:visited {
     color: #09C;
 }
 
+label {
+    display: block;
+}
+
 p.error{
     background-color: red;
     color: white;
@@ -42,7 +46,6 @@ input[type=submit], input[type=button] {
     border: none;
     padding: 5px;
     cursor: pointer;
-
 }
 
 body {
@@ -90,7 +93,7 @@ div#left{
     clear:left;
 }
 
-menu.main, #copyright, #chirp, #llista_enquestes {
+menu.main, #copyright, #enquesta, #llista_enquestes {
     margin-bottom: 10px;
 }
 
@@ -115,12 +118,12 @@ menu.main a:hover{
     color: #666;
 }
 
-#chirp{
+#enquesta{
     padding: 10px;
     background-color: whiteSmoke;
 }
 
-#chirp textarea {
+#enquesta textarea {
     width: 100%;
     height: 10em;
     color: #AAA;
@@ -128,7 +131,7 @@ menu.main a:hover{
     -moz-border-radius: 4px
 }
 
-#chirp input {
+#enquesta input {
     float:right;
 }
 
