--- a/src/main/docroot/css/layout.css
+++ b/src/main/docroot/css/layout.css
@@ -149,7 +149,7 @@ menu.main a:hover{
 
 #content h1 {
     border-bottom: 1px solid #EEE;
-    padding: 10px;
+    padding: 10px 0;
 }
 
 #content ul li{
