--- a/src/main/docroot/css/layout.css
+++ b/src/main/docroot/css/layout.css
@@ -34,6 +34,18 @@ p.error{
     margin: 5px;
 }
 
+input.error {
+    border-color: #FF9999;
+    background-color: #FF9999;
+}
+
+label.error {
+    display: inline;
+    float: none;
+    color: red;
+    padding-left: .5em;
+}
+
 .logo {
     height: 100px;
 }
