--- a/src/main/docroot/css/layout.css
+++ b/src/main/docroot/css/layout.css
@@ -47,7 +47,20 @@ label.error {
 }
 
 .logo {
-    height: 100px;
+    height: 145px;
+    position: relative;
+    top: 0px;
+    right: 0px;
+
+
+
+}
+.titolDescriptor{
+    text-align: right;
+    position: relative;
+    top: 150px;
+    right: 75px;
+
 }
 
 header p.error{
