--- a/src/main/docroot/css/layout.css
+++ b/src/main/docroot/css/layout.css
@@ -18,6 +18,28 @@ h2 {
     -moz-border-radius: 4px;
 }
 
+h3 {
+    font-size: 0.9em;
+    margin-bottom: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
+    background-color: #DCDCDC;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 10px;
+    border-radius: 4px;
+    -moz-border-radius: 4px;
+}
+
+#afegirPreguntes h4 {
+
+    width:30%;
+    text-align:right;
+    margin-right:10px;
+    padding:5px 0;
+    color:gray;
+}
+
 a {
     text-decoration:none;
     color: #09C;
