--- a/src/main/docroot/css/layout.css
+++ b/src/main/docroot/css/layout.css
@@ -5,6 +5,7 @@
 h1 {
     font-size: 1.3em;
     margin-bottom: 10px;
+    text-align: center;
 }
 
 h2 {
@@ -77,7 +78,12 @@ label.error {
 }
 
 .logo {
-    height: 100px;
+    text-align: center;
+}
+
+.logo img {
+    height: 140px;
+    width: 375px;
 }
 
 header p.error{
@@ -115,7 +121,6 @@ header, menu.main, section{
 header {
   padding: 10px;
   margin: 15px 0;
-
 }
 
 header:after, section:after, #content ul li:after {
@@ -124,10 +129,10 @@ header:after, section:after, #content ul li:after {
   clear: both;
 }
 
-header img {
-    float: left;
-    margin: 1em;
-}
+/*header img {
+    height: 150px;
+    width: 400px;
+}*/
 
 header form.logout{
     float:right;
