--- a/src/main/docroot/css/layout.css
+++ b/src/main/docroot/css/layout.css
@@ -24,16 +24,14 @@ h3 {
     margin-bottom: 10px;
     margin-left: 10px;
     margin-right: 10px;
-    background-color: #DCDCDC;
+    
     padding-top: 5px;
     padding-bottom: 5px;
     padding-left: 10px;
-    border-radius: 4px;
-    -moz-border-radius: 4px;
+    border-bottom: 1px solid #DCDCDC;
 }
 
 #afegirPreguntes h4 {
-
     width:30%;
     text-align:right;
     margin-right:10px;
