arreglos de disseny

--- a/src/main/docroot/css/layout.css
+++ b/src/main/docroot/css/layout.css
@@ -323,6 +323,10 @@ div.inputdata input[type="radio"]{
     padding:5px;
 }
 
+#divPreguntes p.template{
+    display:none;
+}
+
 #divPreguntes input[type="button"]{
     float:right;
 }
