control de sessions + implementació completa de sistema d'autentificació d'usuaris + recuperar llistat complet d'enquestes si l'usuari es "administrador"

--- a/src/main/docroot/css/login.css
+++ b/src/main/docroot/css/login.css
@@ -95,6 +95,15 @@
     padding:0;
 }
 
+#loginForm fieldset.template {
+    display:none;
+}
+
+#loginForm #loginFailed span{
+    color: #FF0000;
+    text-align: left;
+}
+
 fieldset#body {
     background:#fff;
     border-radius:3px;
