--- a/src/main/docroot/css/menu.css
+++ b/src/main/docroot/css/menu.css
@@ -16,6 +16,10 @@
     margin: 0 auto;
 }
 
+#navigation > div.privAdmin {
+    width: 70%;
+}
+
 #navigation:after {
 	clear: both;
     content: ".";
