--- a/src/main/docroot/css/menu.css
+++ b/src/main/docroot/css/menu.css
@@ -1,31 +1,33 @@
 #navigation {
-	margin: 0;
 	font: bold 12px/18px "Helvetica Neue", Helvetica, Arial, sans-serif;
 	text-transform: uppercase;
 	color: #444;
     background: #FFF;
     border-radius: 0 0 5px 5px;
     -moz-border-radius: 0 0 5px 5px;
-    margin: 0 0 10px;
-    padding: 0 0 10px;
+    margin: 0 auto;
+    margin-bottom: 10px;
+    padding-bottom: 10px;
 }
 
 #navigation > div {
-    display:block;
     width: 50%;
+    display: block;
     margin: 0 auto;
 }
 
 #navigation > div.privAdmin {
-    width: 70%;
+    width: 72%;
+    display: block;
+    margin: 0 auto;
 }
 
 #navigation:after {
 	clear: both;
     content: ".";
-    display: block;
     height: 0;
     visibility: hidden;
+    margin: 0 auto;
 }
 
 #navigation ul {
@@ -36,7 +38,7 @@
 }
 
 #navigation li {
-	float: left;
+    float: left;
 	border-style: solid;
 	border-width: 1px;
     border-color: #BABABA #BABABA #BABABA #FFF;
@@ -67,7 +69,7 @@
 }
 
 #navigation a {
-	display: block;
+    display: block;
 	padding: 10px 15px;
 	color: #444;
 	text-decoration: none;
