--- a/src/main/docroot/css/layout.css
+++ b/src/main/docroot/css/layout.css
@@ -2,6 +2,37 @@
     display:none;
 }
 
+.message {
+    position:fixed;
+    top:0px;
+    left:0px;
+    background-size: 40px 40px;
+    background-image:   linear-gradient(135deg, rgba(255, 255, 255, .05) 25%, transparent 25%,
+                        transparent 50%, rgba(255, 255, 255, .05) 50%, rgba(255, 255, 255, .05) 75%,
+                        transparent 75%, transparent);                                      
+    box-shadow: inset 0 -1px 0 rgba(255,255,255,.4);
+    width: 100%;
+    border: 1px solid;
+    color: #fff;
+    padding: 7px;
+    position: fixed;
+    _position: absolute;
+    text-shadow: 0 1px 0 rgba(0,0,0,.5);
+    text-align: center;
+    animation: animate-bg 5s linear infinite;
+
+}
+
+.success {
+    background-color: #61b832;
+    border-color: #55a12c;
+}
+
+.fail {
+    background-color: #eaaf51;
+    border-color: #d99a36;
+}
+
 h1 {
     font-size: 1.3em;
     margin-bottom: 10px;
