--- a/src/main/docroot/css/layout.css
+++ b/src/main/docroot/css/layout.css
@@ -61,6 +61,38 @@ h3 {
     border-bottom: 1px solid #DCDCDC;
 }
 
+h4 {
+    font-size: 1em;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 10px;
+    margin-right: 10px;    
+    padding-top: 5px;
+    padding-bottom: 5px;
+    border-top: 1px solid #DCDCDC;
+}
+
+h5 {
+    font-size: 0.9em;
+    margin-top: 5px;
+    margin-bottom: 10px;
+    margin-left: 10px;
+    margin-right: 10px;    
+    padding-top: 0px;
+    padding-bottom: 5px;
+}
+
+h6 {
+    font-size: 1.1em;
+    margin-top: 5px;
+    margin-bottom: 10px;
+    margin-left: 10px;
+    margin-right: 10px;    
+    padding-top: 0px;
+    padding-bottom: 5px;
+    text-align: center;
+}
+
 ul {
 	list-style: none;
 }
