--- a/src/main/docroot/css/layout.css
+++ b/src/main/docroot/css/layout.css
@@ -69,13 +69,12 @@ h4 {
     margin-right: 10px;    
     padding-top: 5px;
     padding-bottom: 5px;
-    border-top: 1px solid #DCDCDC;
 }
 
 h5 {
     font-size: 0.9em;
     margin-top: 5px;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
     margin-left: 10px;
     margin-right: 10px;    
     padding-top: 0px;
@@ -383,6 +382,14 @@ div.inputdata input[type="radio"]{
     width:100%;
     text-align:center;
     margin-top:25px;
+}
+
+.boto2 {
+    clear: both;
+    width:100%;
+    text-align:center;
+    margin-top:10px;
+    margin-bottom: 10px;
 }
 
 #divPreguntes div{
