--- a/src/main/docroot/css/layout.css
+++ b/src/main/docroot/css/layout.css
@@ -491,6 +491,11 @@ div.inputdata input[type="checkbox"]{
     width:100%;
     height:100px;
     resize: none;
+    font-family: "Helvetica Neue",Arial,sans-serif;
+    width: 100%;
+    height: 10em;
+    border-radius: 4px;
+    -moz-border-radius: 4px
 }
 
 .filaEven {
