Assignar una id aleatoria enquestat anonim i permet continuar enquesta.

--- a/src/main/docroot/css/layout.css
+++ b/src/main/docroot/css/layout.css
@@ -547,3 +547,7 @@ div.inputdata input[type="checkbox"]{
     margin-bottom: 25px;
 }
 
+#enquestaURLAnonim p {
+    margin-left: 25px;
+    margin-top: 20px;
+}
