Finalitza enquesta, data actual < data inici enquesta -> Mostrar dades i data inici enquesta

--- a/src/main/docroot/css/layout.css
+++ b/src/main/docroot/css/layout.css
@@ -577,7 +577,7 @@ div.inputdata input[type="checkbox"]{
     margin-bottom: 25px;
     margin-left: 25px;
     margin-right: 25px;
-    text-align: center;
+    text-align: center !important;
 }
 
 .missatgeCentral p{
